testdata/baselines/reference/compiler/noTypeToStringRecursion.errors.txt
noTypeToStringRecursion.tlua(3,37): error TS2304: Cannot find name 'f'.


==== noTypeToStringRecursion.tlua (1 errors) ====
    // https://github.com/microsoft/typescript-go/issues/3805
    
    local f = () => 42 satisfies typeof f;
                                        ~
!!! error TS2304: Cannot find name 'f'.
    